# effort-log

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  EffortLog.pro  README.md
.github/workflows/: build.yml
doc/: Makefile  about.html  about.md  answer.html  development.html  dialog.html  dialog_window.html  doc.css  doc.html  doc.qrc  help.html  help.md  history.html  index.html  license.html  log_viewer.html  logfile.html  logfile.md  logfile_format.html  logfile_handling.html  main.html  main.md  main_window.html  privileges.html  questionnaire.md  settings.html  wizard.html  wizard.md  wizard_window.html
resources/: Info.plist  img.qrc
src/: activity.cc  activity.h  appenddialog.cc  appenddialog.h  appnap.h  appnap.mm  crypt.cc  crypt.h  definitions.h  logview.cc  logview.h  main.cc  mainwindow.cc  mainwindow.h  milestone.cc  milestone.h  milestonedialog.cc  milestonedialog.h  passworddialog.cc  passworddialog.h  proinitdialog.cc  proinitdialog.h  project.cc  project.h  qstform.cc  qstform.h  questionnairedialog.cc  questionnairedialog.h  setupdialog.cc  setupdialog.h
tools/: format.sh  linux_before.sh  linux_build.sh  mac_osx_deploy.sh  mac_osx_install.sh  macos_deploy.sh  unix_build.sh  windows_deploy.bat  windows_deploy_64.bat  windows_deploy_64_encrypted.bat  windows_deploy_encrypted.bat
